chore: Create Release Actions > 버전 조회 명령어 오타 수정

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Get a version number
         id: get_version
         run: |
-          VERSION=${node -p "require('./package.json').version"}
+          VERSION=$(node -p "require('./package.json').version")
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Create a tag
