--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -33,6 +33,8 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+          git tag -a v${{ steps.get_version.outputs.version }} -m "${{ github.event.commits[0].message }}"
+
           git push origin v${{ steps.get_version.outputs.version }}
 
       - name: Create a release tag
