chore: Create Release Actions > Release 생성 오류 수정

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -40,6 +40,8 @@ jobs:
       - name: Create a release tag
         uses: ncipollo/release-action@v1
         with:
+          tag: v${{ steps.get_version.outputs.version }}
           name: v${{ steps.get_version.outputs.version }}
+          skipIfReleaseExists: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
