chore: 버전 검증 워크플로우 수정

--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -2,7 +2,7 @@ name: Verify PR template
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [edited, opened, reopened]
 
 jobs:
   verify_template:
@@ -22,7 +22,7 @@ jobs:
       - name: Parse PR template
         id: parse_template
         env:
-          pr_body: ${{ github.event.pull_request.body}}
+          pr_body: ${{ github.event.pull_request.body }}
         run: |
           node << EOF
           const fs = require('fs');
