--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -22,12 +22,12 @@ jobs:
       - name: Parse PR template
         id: parse_template
         env:
-          pr_body: ${{ github.event.pull_request.body }}
+          PR_BODY: ${{ github.event.pull_request.body }}
         run: |
           node << EOF
           const fs = require('fs');
 
-          const message = process.env.pr_body;
+          const message = process.env.PR_BODY;
 
           function extractSection(text, start, end = null) {
             const regex = end
@@ -77,3 +77,24 @@ jobs:
           else
             exit 0
           fi
+
+      - name: Add failure label
+        if: failure()
+        run: |
+          LABEL_NAME="빌드실패"
+          LABEL_COLOR="FF0000"
+          # 레이블이 없으면 생성
+          if ! gh label list | grep -q "^$LABEL_NAME"; then
+            gh label create "$LABEL_NAME" --color "$LABEL_COLOR" --description "빌드 실패 레이블"
+          fi
+          # PR에 레이블 추가
+          gh pr edit ${{ github.event.pull_request.number }} --add-label "$LABEL_NAME"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Remove failure label (if success)
+        if: success()
+        uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: 빌드실패
