--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -24,7 +24,7 @@ jobs:
         env:
           PR_BODY: ${{ github.event.pull_request.body }}
         run: |
-          node << EOF
+          node << 'EOF'
           const fs = require('fs');
 
           const message = process.env.PR_BODY;
