chore: 버전 검증 워크플로우 트리거 유형 수정

--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -2,7 +2,7 @@ name: Verify PR template
 
 on:
   pull_request:
-    types: [edited, opened, reopened]
+    types: [edited, opened, reopened, synchronize]
 
 jobs:
   verify_template:
