chore: 워크플로우 로직 오류 수정

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -67,7 +67,7 @@ jobs:
         id: decode_version
         run: |
           VERSION_DECODED=$(echo "${{ steps.parse_template.outputs.version }}" | base64 --decode)
-          echo "version=$VERSION_DECODED"
+          echo "version=$VERSION_DECODED" >> $GITHUB_OUTPUT
 
       - name: Verify version
         run: |
