--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   verify_template:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -64,7 +66,7 @@ jobs:
         id: decode_version
         run: |
           VERSION_DECODED=$(echo "${{ steps.parse_template.outputs.version }}" | base64 --decode)
-          echo "version=$VERSION_DECODED"
+          echo "version=$VERSION_DECODED" >> $GITHUB_OUTPUT
 
       - name: Verify version
         run: |
