--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -73,7 +73,7 @@ jobs:
           if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
             echo "Error: Version section is missing or empty in the PR template."
             exit 1
-          elif ! [[ "${VERSION_DECODED}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Error: Version format is invalid. Expected format: vX.Y.Z"
             exit 1
           else
