chore: 태그 및 Github Release 생성 워크플로우 로직 수정

--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   verify_template:
+    name: Verify PR Template
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
