--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -5,7 +5,8 @@ on:
     types: [closed]
 
 jobs:
-  update_version:
+  create_tag_and_release:
+    name: Create Tag and Release
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
     permissions:
@@ -25,12 +26,12 @@ jobs:
       - name: Parse PR template
         id: parse_template
         env:
-          pr_body: ${{ github.event.pull_request.body}}
+          PR_BODY: ${{ github.event.pull_request.body }}
         run: |
-          node << EOF
+          node << 'EOF'
           const fs = require('fs');
 
-          const message = process.env.pr_body;
+          const message = process.env.PR_BODY;
 
           function extractSection(text, start, end = null) {
             const regex = end
@@ -68,16 +69,6 @@ jobs:
         run: |
           VERSION_DECODED=$(echo "${{ steps.parse_template.outputs.version }}" | base64 --decode)
           echo "version=$VERSION_DECODED" >> $GITHUB_OUTPUT
-
-      - name: Verify version
-        run: |
-          if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
-            echo "Error: Version section is missing or empty in the PR template."
-            exit 1
-          elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Error: Version format is invalid. Expected format: vX.Y.Z"
-            exit 1
-          fi
 
       - name: Create a tag
         run: |
