--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -68,8 +68,8 @@ jobs:
           if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
             echo "Error: Version section is missing or empty in the PR template."
             exit 1
-          elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Error: Version format is invalid. Expected format: vX.Y.Z"
+          elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Version format is invalid. Expected format: X.Y.Z"
             exit 1
           else
             exit 0
