--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -45,19 +45,13 @@ jobs:
               .trim();
           }
 
-          function convertSlackLinks(text) {
-            return text.replace(/\[([^\]]+)\]\((https:\/\/[^\s)]+)\)/g,'<$2|$1>');
-          }
-
-          function cleanIndentation(text) {
-            return text
-              .split('\n')
-              .map(line => line.trim())
-              .join('\n');
+          function extractVersion(text) {
+            const _split = text.trim().split('v');
+            return _split.length > 1 ? _split[1].trim() : '';
           }
 
           // Extract and clean
-          const version = cleanIndentation(extractSection(message, 'Version', 'Summary'));
+          const version = extractVersion(extractSection(message, 'Version', 'Summary'));
           // base64 인코딩
           const encode = str => Buffer.from(str, 'utf-8').toString('base64');
           fs.appendFileSync(process.env.GITHUB_OUTPUT, `version=${encode(version)}\n`);
@@ -74,8 +68,8 @@ jobs:
           if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
             echo "Error: Version section is missing or empty in the PR template."
             exit 1
-          elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Error: Version format is invalid. Expected format: vX.Y.Z"
+          elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Version format is invalid. Expected format: X.Y.Z"
             exit 1
           else
             exit 0
