chore: 버전 존재 여부를 확인하는 로직 추가

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -69,9 +69,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git tag -a ${{ steps.decode_version.outputs.version }} -m "Update version (${{ steps.parse_template.outputs.version }})"
+          git tag -a v${{ steps.decode_version.outputs.version }} -m "Update version (${{ steps.parse_template.outputs.version }})"
 
-          git push origin ${{ steps.decode_version.outputs.version }}
+          git push origin v${{ steps.decode_version.outputs.version }}
 
       - name: Create a release
         uses: ncipollo/release-action@v1
