--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -75,6 +75,16 @@ jobs:
             exit 0
           fi
 
+      - name: Check tag redundancy
+        run: |
+          git fetch --tags
+          if git rev-parse -q --verify "refs/tags/v${{ steps.decode_version.outputs.version }}" >/dev/null; then
+            echo "Error: Tag v${{ steps.decode_version.outputs.version }} already exists."
+            exit 1
+          else
+            exit 0
+          fi
+
       - name: Add failure label
         if: failure()
         run: |
