--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -64,26 +64,53 @@ jobs:
           echo "version=$VERSION_DECODED" >> $GITHUB_OUTPUT
 
       - name: Verify version
+        id: verify_version
         run: |
           if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
             echo "Error: Version section is missing or empty in the PR template."
+            echo "status=fail" >> $GITHUB_OUTPUT
             exit 1
           elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Error: Version format is invalid. Expected format: X.Y.Z"
+            echo "status=fail" >> $GITHUB_OUTPUT
             exit 1
           else
+            echo "status=success" >> $GITHUB_OUTPUT
             exit 0
           fi
 
       - name: Check tag redundancy
+        id: check_tag_redundancy
         run: |
           git fetch --tags
           if git rev-parse -q --verify "refs/tags/v${{ steps.decode_version.outputs.version }}" >/dev/null; then
             echo "Error: Tag v${{ steps.decode_version.outputs.version }} already exists."
+            echo "status=fail" >> $GITHUB_OUTPUT
             exit 1
           else
+            echo "status=success" >> $GITHUB_OUTPUT
             exit 0
           fi
+
+      - name: Comment for version failure
+        if: steps.verify_version.outputs.status == 'fail'
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            ⚠️ 버전 검증에 실패했습니다.
+
+            올바른 형식으로 Version 섹션을 작성해 주세요. 예시: `v1.2.3`
+
+      - name: Comment for tag redundancy failure
+        if: steps.check_tag_redundancy.outputs.status == 'fail'
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            ⚠️ 태그 중복 검증에 실패했습니다.
+
+            해당 버전의 태그가 이미 존재합니다. 새로운 버전을 지정해 주세요. (현재 버전: v${{ steps.decode_version.outputs.version }})
 
       - name: Add failure label
         if: failure()
