--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -65,13 +65,14 @@ jobs:
 
       - name: Verify version
         id: verify_version
+        continue-on-error: true
         run: |
           if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
-            echo "Error: Version section is missing or empty in the PR template."
+            echo "[Error] Version section is missing or empty in the PR template."
             echo "status=fail" >> $GITHUB_OUTPUT
             exit 1
           elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Error: Version format is invalid. Expected format: X.Y.Z"
+            echo "[Error] Version format is invalid. Expected format: X.Y.Z"
             echo "status=fail" >> $GITHUB_OUTPUT
             exit 1
           else
@@ -81,10 +82,11 @@ jobs:
 
       - name: Check tag redundancy
         id: check_tag_redundancy
+        continue-on-error: true
         run: |
           git fetch --tags
           if git rev-parse -q --verify "refs/tags/v${{ steps.decode_version.outputs.version }}" >/dev/null; then
-            echo "Error: Tag v${{ steps.decode_version.outputs.version }} already exists."
+            echo "[Error] Tag v${{ steps.decode_version.outputs.version }} already exists."
             echo "status=fail" >> $GITHUB_OUTPUT
             exit 1
           else
