chore: 버전 검증 워크플로우 수정

--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -99,6 +99,7 @@ jobs:
         uses: peter-evans/create-or-update-comment@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
           body: |
             ⚠️ 버전 검증에 실패했습니다.
 
@@ -109,6 +110,7 @@ jobs:
         uses: peter-evans/create-or-update-comment@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
           body: |
             ⚠️ 태그 중복 검증에 실패했습니다.
 
