--- a/.github/workflows/verify-template.yaml
+++ b/.github/workflows/verify-template.yaml
@@ -67,10 +67,8 @@ jobs:
         id: verify_version
         run: |
           if [ -z "${{ steps.decode_version.outputs.version }}" ]; then
-            echo "[Error] Version section is missing or empty in the PR template."
             echo "status=fail" >> $GITHUB_OUTPUT
           elif ! [[ ${{ steps.decode_version.outputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "[Error] Version format is invalid. Expected format: X.Y.Z"
             echo "status=fail" >> $GITHUB_OUTPUT
           else
             echo "status=success" >> $GITHUB_OUTPUT
@@ -81,7 +79,6 @@ jobs:
         run: |
           git fetch --tags
           if git rev-parse -q --verify "refs/tags/v${{ steps.decode_version.outputs.version }}" >/dev/null; then
-            echo "[Error] Tag v${{ steps.decode_version.outputs.version }} already exists."
             echo "status=fail" >> $GITHUB_OUTPUT
           else
             echo "status=success" >> $GITHUB_OUTPUT
@@ -112,7 +109,13 @@ jobs:
       - name: Check process result
         if: steps.verify_version.outputs.status == 'fail' || steps.check_tag_redundancy.outputs.status == 'fail'
         run: |
-          echo "[Error] 검증 프로세스 실패로 작업 중단."
+          if [ "${{ steps.verify_version.outputs.status }}" == "fail" ] then
+            echo "[Error] Version verification failed. (version: ${{ steps.decode_version.outputs.version }})"
+          fi
+
+          if [ "${{ steps.check_tag_redundancy.outputs.status }}" == "fail" ] then
+            echo "[Error] Tag redundancy check failed. (duplicated tag: v${{ steps.decode_version.outputs.version }})"
+          fi
           exit 1
 
       - name: Add failure label
