--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -32,7 +32,8 @@ jobs:
                   echo "Package version: $PACKAGE_VERSION"
                   echo "package_version=$PACKAGE_VERSION" >> $GITHUB_OUTPUT
 
-                  LATEST_TAG_VERSION=$(git describe --tags $(git rev-list origin/main --tags --max-count=1))
+                  RAW_LATEST_TAG_VERSION=$(git describe $(git rev-list origin/main --tags --max-count=1))
+                  LATEST_TAG_VERSION=${RAW_LATEST_TAG_VERSION#v}
                   echo "Latest tag version: $LATEST_TAG_VERSION"
                   echo "latest_tag_version=$LATEST_TAG_VERSION" >> $GITHUB_OUTPUT
 
@@ -42,7 +43,7 @@ jobs:
                   PACKAGE_VERSION=${{ steps.get_versions.outputs.package_version }}
                   LATEST_TAG_VERSION=${{ steps.get_versions.outputs.latest_tag_version }}
 
-                  if [ "$PACKAGE_VERSION" != "$LATEST_TAG_VERSION"]; then
+                  if [ "$PACKAGE_VERSION" != "$LATEST_TAG_VERSION" ]; then
                       echo "Version mismatch: package.json version ($PACKAGE_VERSION) is different from latest tag version ($LATEST_TAG_VERSION)."
                       echo "status=fail" >> $GITHUB_OUTPUT
                   else
