--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -60,8 +60,8 @@ jobs:
                   body: |
                       ⚠️ 버전 불일치
 
-                      현재 `package.json`의 버전 `${{ steps.get_versions.outputs.package_version }}`이(가) 최신 태그 버전 `${{ steps.get_versions.outputs.latest_tag_version }}`과(와) 일치하지 않습니다.
-                      버전을 확인하고 필요한 경우 업데이트해 주세요.
+                      현재 `package.json`의 버전 `v${{ steps.get_versions.outputs.package_version }}`이(가) 최신 태그 버전 `v${{ steps.get_versions.outputs.latest_tag_version }}`과(와) 일치하지 않습니다.
+                      버전을 확인하고 업데이트해 주세요.
 
             - name: Set failure status
               if: steps.compare_versions.outputs.status == 'fail'
