chore: Action 실패 시, 병합이 되지 않도록 status 1 반환

--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -87,6 +87,8 @@ jobs:
                       fi
                       # Add the label to the PR
                       gh pr edit ${{ github.event.pull_request.number }} --add-label "$LABEL_NAME"
+
+                      exit 1
                   fi
 
             - name: Remove merge conflict label (if no conflict)
