--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -32,7 +32,7 @@ jobs:
                   echo "Package version: $PACKAGE_VERSION"
                   echo "package_version=$PACKAGE_VERSION" >> $GITHUB_OUTPUT
 
-                  RAW_LATEST_TAG_VERSION=$(git describe $(git rev-list origin/main --tags --max-count=1))
+                  RAW_LATEST_TAG_VERSION=$(git describe --abbrev=0 origin/main)
                   LATEST_TAG_VERSION=${RAW_LATEST_TAG_VERSION#v}
                   echo "Latest tag version: $LATEST_TAG_VERSION"
                   echo "latest_tag_version=$LATEST_TAG_VERSION" >> $GITHUB_OUTPUT
@@ -73,14 +73,11 @@ jobs:
                   if [ "${{ steps.compare_versions.outputs.status }}" == "fail" ]; then
                       LABEL_NAME="버전 불일치"
                       FAILURE=true
-                  elif [ "${{ github.event.pull_request.mergeable }}" == "CONFLICTING" ]; then
-                      LABEL_NAME="코드 충돌"
-                      FAILURE=true
                   fi
 
                   # If there's a failure, add the label
                   if [ "$FAILURE" = true ]; then
-                      # Check if the label exists; if not, create it
+                      # Check if the label exists
                       if [ ! gh label list | grep -q "^$LABEL_NAME" ]; then
                           gh label create "$LABEL_NAME" --color FF0000 --description "$LABEL_NAME"
                       fi
@@ -89,13 +86,6 @@ jobs:
 
                       exit 1
                   fi
-
-            - name: Remove merge conflict label (if no conflict)
-              if: github.event.pull_request.mergeable != 'CONFLICTING'
-              uses: actions-ecosystem/action-remove-labels@v1
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  labels: 코드 충돌
 
             - name: Remove version mismatch label (if success)
               if: steps.compare_versions.outputs.status == 'success'
