--- a/.github/workflows/auto-update-version.yaml
+++ b/.github/workflows/auto-update-version.yaml
@@ -94,14 +94,25 @@ jobs:
             contents: write
             pull-requests: write
         steps:
+            - name: Checkout
+              uses: actions/checkout@v6
+              with:
+                  fetch-depth: 0
+                  ref: ${{ needs.create_branch.outputs.branch }}
+                  
             - name: Create a pull request
               id: create_pr
-              uses: peter-evans/create-pull-request@v5
+              uses: peter-evans/create-pull-request@v8
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
+                  author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
                   base: main
                   branch: ${{ needs.create_branch.outputs.branch }}
                   commit-message: "chore: Update version (v${{ needs.create_branch.outputs.version }})"
+                  delete-branch: true
+                  labels: |
+                      Automated
+                      Update Version
                   title: "chore: Update version (v${{ needs.create_branch.outputs.version }})"
                   body: |
                       Automated version update after merge.
@@ -109,11 +120,16 @@ jobs:
                       - Previous version: v${{ needs.create_branch.outputs.version }}
                       - New version: v${{ needs.update_version.outputs.new_version }}
             
+            - name: Auto approve PR
+              if: steps.create_pr.outputs.pull-request-operation == 'created'
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: gh pr review --approve ${{ steps.create_pr.outputs.pull-request-number }}
+            
             - name: Auto merge PR
-              if: steps.create_pr.outputs.pull-request-operation == 'created' && steps.create_pr.outputs.pull-request-number != ''
               uses: peter-evans/enable-pull-request-automerge@v3
               with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
-                  merge_method: rebase
+                  merge-method: rebase
             
