--- a/.github/workflows/auto-update-version.yaml
+++ b/.github/workflows/auto-update-version.yaml
@@ -102,33 +102,27 @@ jobs:
                   
             - name: Create a pull request
               id: create_pr
-              uses: peter-evans/create-pull-request@v8
-              with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
-                  author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
-                  base: main
-                  branch: ${{ needs.create_branch.outputs.branch }}
-                  commit-message: "chore: Update version (v${{ needs.create_branch.outputs.version }})"
-                  labels: |
-                      Automated
-                      Update Version
-                  title: "chore: Update version (v${{ needs.create_branch.outputs.version }})"
-                  body: |
-                      Automated version update after merge.
+              run: |
+                  PR_URL=$(gh pr create \
+                    --base main \
+                    --head ${{ needs.create_branch.outputs.branch }} \
+                    --title "chore: Update version (v${{ needs.update_version.outputs.new_version }})" \
+                    --label "Automated" \
+                    --label "Update version" \
+                    --body "Automated version update after merge.
+                    
+                    - Previous version: v${{ needs.create_branch.outputs.version }}
+                    - New version: v${{ needs.update_version.outputs.new_version }}")
 
-                      - Previous version: v${{ needs.create_branch.outputs.version }}
-                      - New version: v${{ needs.update_version.outputs.new_version }}
+                  echo "pr_url=$PR_URL" >> $GITHUB_OUTPUT
             
             - name: Auto approve PR
-              if: steps.create_pr.outputs.pull-request-operation == 'created'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: gh pr review --approve ${{ steps.create_pr.outputs.pull-request-number }}
+              run: gh pr review --approve ${{ steps.create_pr.outputs.pr_url }}
             
-            - name: Auto merge PR
-              uses: peter-evans/enable-pull-request-automerge@v3
-              with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
-                  pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
-                  merge-method: rebase
+            - name: Enable auto merge
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: gh pr merge "${{ steps.create_pr.outputs.pr_url }}" --auto --rebase
             
