feat: 버전 검증 Action 실행 조건 추가

--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -9,7 +9,7 @@ jobs:
     verify_version:
         name: Verify version
         runs-on: ubuntu-latest
-        if: github.event.pull_request.draft == false
+        if: github.event.pull_request.draft == false && !startsWith(github.event.pull_request.head.ref, 'release/update-version')
         permissions:
             contents: read
             pull-requests: write
