--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -9,7 +9,7 @@ jobs:
     verify_version:
         name: Verify version
         runs-on: ubuntu-latest
-        if: github.event.pull_request.draft == false && !startsWith(github.event.pull_request.head.ref, 'release/update-version')
+        if: github.event.pull_request.draft == false
         permissions:
             contents: read
             pull-requests: write
@@ -18,6 +18,12 @@ jobs:
               uses: actions/checkout@v6
               with:
                   fetch-depth: 0
+
+            - name: Skip verify for automated PRs
+              if: startsWith(github.event.pull_request.head.ref, 'release/update-version') && contains(join(github.event.pull_request.labels.*.name, ','), 'Automated')
+              run: |
+                  echo "This is an automated PR for version update. Skipping verification."
+                  exit 0
 
             - name: Setup node.js
               uses: actions/setup-node@v5
