--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -6,12 +6,14 @@ on:
     types: [closed]
 
 jobs:
-  create_tag_and_release:
+  create_tag:
     name: Create Tag and Release
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/update-version') && contains(join(github.event.pull_request.labels.*.name, ','), 'Automated')
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/update-version')
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    outputs:
+      version: ${{ steps.update_version.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -51,13 +53,20 @@ jobs:
           git tag -a v${{ steps.update_version.outputs.version }} -m "Update version (${{ steps.update_version.outputs.version }})"
           git push origin v${{ steps.update_version.outputs.version }}
 
+  create_release:
+    name: Create a Github Release
+    needs: create_tag
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
       - name: Create a release
         uses: ncipollo/release-action@v1
         with:
           generateReleaseNotes: true
-          name: v${{ steps.update_version.outputs.version }}
+          name: v${{ needs.create_tag.outputs.version }}
           skipIfReleaseExists: true
-          tag: v${{ steps.update_version.outputs.version }}
+          tag: v${{ needs.create_tag.outputs.version }}
           makeLatest: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
