--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -3,6 +3,7 @@ name: Verify version
 on:
     pull_request:
         branches: ['main']
+        types: [edited, opened, ready_for_review, reopened, synchronize]
 
 jobs:
     verify_version:
