refactor: Action 코드 정리 (#33)
* refactor: Action 코드 정리

* feat: 버전 검증 Action 트리거 재설정

--- a/.github/workflows/verify-version.yaml
+++ b/.github/workflows/verify-version.yaml
@@ -3,7 +3,7 @@ name: Verify version
 on:
     pull_request:
         branches: ['main']
-        types: [auto_merge_enabled, edited, opened, ready_for_review, reopened, synchronize]
+        types: [edited, opened, ready_for_review, reopened, synchronize]
 
 jobs:
     verify_version:
