--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -13,7 +13,7 @@ jobs:
     permissions:
       contents: write
     outputs:
-      version: ${{ steps.update_version.outputs.version }}
+      version: ${{ steps.get_version.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -26,32 +26,20 @@ jobs:
           node-version: 20
           cache: "yarn"
 
-      - name: Update version
-        id: update_version
+      - name: Get version
+        id: get_version
         run: |
-          # Update the version
-          yarn version --patch --no-git-tag-version
-
           # Get the new version
           VERSION=$(node -p "require('./package.json').version")
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-
-          # Configure git
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Commit the version change
-          git add package.json
-          git commit -m "chore: Update version ($VERSION)"
-          git push origin main
 
       - name: Create a tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git tag -a v${{ steps.update_version.outputs.version }} -m "Update version (${{ steps.update_version.outputs.version }})"
-          git push origin v${{ steps.update_version.outputs.version }}
+          git tag -a v${{ steps.get_version.outputs.version }} -m "Update version (v${{ steps.get_version.outputs.version }})"
+          git push origin v${{ steps.get_version.outputs.version }}
 
   create_release:
     name: Create a Github Release
